--- a/siamit/frontend/src/i18n/locales/th.json
+++ b/siamit/frontend/src/i18n/locales/th.json
@@ -353,9 +353,9 @@
     "download": "ดาวน์โหลด",
     "files": "ไฟล์",
     "leaveRequestForm": "แบบฟอร์มขอลา",
-    "dateInformation":"ข้อมูลวันที่",
-    "statusAndApproval":"สถานะและการอนุมัติ",
-    "contactInformation":"ข้อมูลการติดต่อ",
+    "dateInformation": "ข้อมูลวันที่",
+    "statusAndApproval": "สถานะและการอนุมัติ",
+    "contactInformation": "ข้อมูลการติดต่อ",
     "adminLeaveRequest": "กรอกใบลาให้พนักงาน",
     "adminLeaveRequestDesc": "สำหรับผู้ดูแลระบบในการกรอกใบลาให้พนักงานในระบบ",
     "selectEmployee": "เลือกพนักงาน",
@@ -402,7 +402,6 @@
       "labelContact": "ช่องทางติดต่อ",
       "labelAttachments": "ไฟล์แนบ"
     }
-
   },
   "leaveTypes": {
     "all": "ทั้งหมด",
@@ -641,7 +640,7 @@
     "rejectSuccess": "ไม่อนุมัติ",
     "dateOfBirth": "วันเกิด",
     "startWork": "เลือกวันเริ่มฝึกงาน",
-    "endWork":"สิ้นสุดฝึกงาน",
+    "endWork": "สิ้นสุดฝึกงาน",
     "enterDateOfBirth": "กรอกวันเกิด",
     "rejectSuccessDesc": "ไม่อนุมัติคำขอลาของ {{name}}",
     "connectionError": "เกิดข้อผิดพลาดในการเชื่อมต่อ",
@@ -896,7 +895,7 @@
     "selectDate": "เลือกวันที่",
     "other": "อื่นๆ",
     "preferNotToSay": "ไม่ต้องการระบุ",
-    "futureDateNotAllowed":"ไม่อนุญาตให้เลือกวันที่ในอนาคต"
+    "futureDateNotAllowed": "ไม่อนุญาตให้เลือกวันที่ในอนาคต"
   },
   "notification": {
     "notifications": "การแจ้งเตือน",
@@ -911,7 +910,6 @@
     "rejectedDesc": "คำขอของคุณถูกปฏิเสธ",
     "markAsRead": "อ่านแล้ว",
     "markAllAsRead": "อ่านแล้วทั้งหมด",
-
     "setNewPassword": "ตั้งรหัสผ่านใหม่",
     "name": "ชื่อ",
     "unread": "ยังไม่ได้อ่าน",
@@ -1131,5 +1129,22 @@
     "downloadSuccessDesc": "ดาวน์โหลดไฟล์สำเร็จแล้ว",
     "downloadError": "ดาวน์โหลดไม่สำเร็จ",
     "downloadErrorDesc": "ไม่สามารถดาวน์โหลดไฟล์ได้"
+  },
+  "errorBoundary": {
+    "title": "\u0e40\u0e01\u0e34\u0e14\u0e02\u0e49\u0e2d\u0e1c\u0e34\u0e14\u0e1e\u0e25\u0e32\u0e14",
+    "description": "\u0e02\u0e2d\u0e2d\u0e20\u0e31\u0e22 \u0e40\u0e01\u0e34\u0e14\u0e02\u0e49\u0e2d\u0e1c\u0e34\u0e14\u0e1e\u0e25\u0e32\u0e14\u0e17\u0e35\u0e48\u0e44\u0e21\u0e48\u0e04\u0e32\u0e14\u0e04\u0e34\u0e14",
+    "reload": "\u0e42\u0e2b\u0e25\u0e14\u0e2b\u0e19\u0e49\u0e32\u0e43\u0e2b\u0e21\u0e48"
+  },
+  "validation": {
+    "password": {
+      "minLength": "\u0e15\u0e49\u0e2d\u0e07\u0e21\u0e35\u0e2d\u0e22\u0e48\u0e32\u0e07\u0e19\u0e49\u0e2d\u0e22 8 \u0e15\u0e31\u0e27\u0e2d\u0e31\u0e01\u0e29\u0e23",
+      "uppercase": "\u0e15\u0e49\u0e2d\u0e07\u0e21\u0e35\u0e15\u0e31\u0e27\u0e2d\u0e31\u0e01\u0e29\u0e23\u0e1e\u0e34\u0e21\u0e1e\u0e4c\u0e43\u0e2b\u0e0d\u0e48\u0e2d\u0e22\u0e48\u0e32\u0e07\u0e19\u0e49\u0e2d\u0e22 1 \u0e15\u0e31\u0e27",
+      "lowercase": "\u0e15\u0e49\u0e2d\u0e07\u0e21\u0e35\u0e15\u0e31\u0e27\u0e2d\u0e31\u0e01\u0e29\u0e23\u0e1e\u0e34\u0e21\u0e1e\u0e4c\u0e40\u0e25\u0e47\u0e01\u0e2d\u0e22\u0e48\u0e32\u0e07\u0e19\u0e49\u0e2d\u0e22 1 \u0e15\u0e31\u0e27",
+      "number": "\u0e15\u0e49\u0e2d\u0e07\u0e21\u0e35\u0e15\u0e31\u0e27\u0e40\u0e25\u0e02\u0e2d\u0e22\u0e48\u0e32\u0e07\u0e19\u0e49\u0e2d\u0e22 1 \u0e15\u0e31\u0e27"
+    },
+    "file": {
+      "imageOnly": "\u0e01\u0e23\u0e38\u0e13\u0e32\u0e40\u0e25\u0e37\u0e2d\u0e01\u0e44\u0e1f\u0e25\u0e4c\u0e23\u0e39\u0e1b\u0e20\u0e32\u0e1e\u0e40\u0e17\u0e48\u0e32\u0e19\u0e31\u0e49\u0e19 (JPG, PNG, GIF, WebP)",
+      "tooLarge": "\u0e02\u0e19\u0e32\u0e14\u0e44\u0e1f\u0e25\u0e4c\u0e43\u0e2b\u0e0d\u0e48\u0e40\u0e01\u0e34\u0e19\u0e44\u0e1b \u0e01\u0e23\u0e38\u0e13\u0e32\u0e40\u0e25\u0e37\u0e2d\u0e01\u0e44\u0e1f\u0e25\u0e4c\u0e17\u0e35\u0e48\u0e21\u0e35\u0e02\u0e19\u0e32\u0e14\u0e44\u0e21\u0e48\u0e40\u0e01\u0e34\u0e19 10MB"
+    }
   }
 }
